# llmtuna

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
llmtuna/: __init__.py  context.py  defaults.py  space.py  tuner.py
llmtuna/providers/: __init__.py  base.py  mock.py  openrouter.py
tests/integration/: test_openrouter_live.py
tests/unit/: test_context.py  test_mock.py  test_openrouter.py  test_space.py  test_tuner.py
