[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmtuna"
version = "0.1.0"
description = "LLM-driven hyperparameter optimization for anything with knobs and a scalar metric."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Alex Stern", email = "alexkstern@gmail.com"}]
dependencies = [
    "openai>=1.0,<2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]

